# jaxRL

./: .gitignore  README.md  Untitled.ipynb  main.py  mypy.ini  noxfile.py  pyproject.toml
equinox_rl/: a2c.py  ac_discrete_action_space.py  pg_discrete_action_space.py  policy_gradient.py
equinox_rl/common/: eqx_helpers.py  gym_helpers.py  rl_helpers.py
jax_rl/: common_helper_functions.py  commons.py  policy_gradient.py  ppo.py  ppo2.py  rollout.py
jax_rl/common/: eqx_helpers.py  gym_helpers.py  rl_helpers.py
jax_rl/examples/: cartpole_pg.py  pg_test.py  ppo.py  ppo_test.py
notebooks/: Untitled.ipynb  gymnax_intro.ipynb  ppo-Copy1.ipynb  ppo.ipynb
studies/: CartPole-v1.db  LunarLander-v2.db  studies.db
tests/: test_gym_helpers.py  test_rl_helpers.py  testing_ground.py
videos/: jax-cartpole-episode-1000.meta.json  jax-cartpole-episode-10000.meta.json  jax-cartpole-episode-11000.meta.json  jax-cartpole-episode-12000.meta.json  jax-cartpole-episode-13000.meta.json  jax-cartpole-episode-14000.meta.json  jax-cartpole-episode-15000.meta.json  jax-cartpole-episode-16000.meta.json  jax-cartpole-episode-17000.meta.json  jax-cartpole-episode-18000.meta.json  jax-cartpole-episode-19000.meta.json  jax-cartpole-episode-2000.meta.json  jax-cartpole-episode-20000.meta.json  jax-cartpole-episode-21000.meta.json  jax-cartpole-episode-22000.meta.json  jax-cartpole-episode-23000.meta.json  jax-cartpole-episode-24000.meta.json  jax-cartpole-episode-25000.meta.json  jax-cartpole-episode-26000.meta.json  jax-cartpole-episode-27000.meta.json  jax-cartpole-episode-28000.meta.json  jax-cartpole-episode-29000.meta.json  jax-cartpole-episode-3000.meta.json  jax-cartpole-episode-30000.meta.json  jax-cartpole-episode-4000.meta.json  jax-cartpole-episode-5000.meta.json  jax-cartpole-episode-6000.meta.json  jax-cartpole-episode-7000.meta.json  jax-cartpole-episode-8000.meta.json  jax-cartpole-episode-9000.meta.json
