[tool.poetry]
name = "jaxRL"
version = "0.1.0"
description = ""
authors = ["Artur A. Galstyan <mail@arturgalstyan.dev>"]
readme = "README.md"
packages = [{include = "jax_rl"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
gymnasium = {extras = ["box2d"], version = "^0.28.1"}
jaxtyping = "^0.2.14"
tensorflow-probability = "^0.23.0"
tensorflow-macos = "^2.14.0"
optuna = "^3.4.0"
jupyter = "^1.0.0"
jupyterlab = "^3.6.6"
torch = "^2.1.0"
optax = "^0.1.7"
tqdm = "^4.66.1"
moviepy = "^1.0.3"
gym = "^0.26.2"
chex = "^0.1.85"
matplotlib = "^3.8.1"
jax = "^0.4.23"
equinox = "^0.11.2"
jaxlib = "^0.4.20"
icecream = "^2.1.3"
beartype = "^0.16.4"
brax = "^0.9.3"
rlax = "^0.1.6"
gymnax = "^0.0.6"
flax = "^0.7.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["F722", "F821"]


