[project]
name = "jaxRL"
version = "0.1.0"
description = "Reinforcement Learning with JAX"
readme = "README.md"
requires-python ="~=3.10"
license = "MIT"
authors = [
  {name = "Artur A. Galstyan", email = "mail@arturgalstyan.dev"},
]
dependencies=[
  "gymnasium",
  "gymnasium[box2d]",
  "jaxtyping",
  "optuna",
  "jupyter",
  "jupyterlab",
  "optax",
  "tqdm",
  "moviepy",
  "jax",
  "equinox",
  "jaxlib",
  "brax",
  "rlax",
  "beartype",
  "matplotlib",
  "jaxonloader",
  "loguru"
]

[tool.ruff]
extend-include = ["*.ipynb"]
fixable = ["I001", "F401"]
ignore = ["E402", "E721", "E731", "E741", "F722"]
ignore-init-module-imports = true
select = ["E", "F", "I001"]
src = []

[tool.ruff.isort]
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
lines-after-imports = 2
order-by-type = false

[tool.pyright]
reportIncompatibleMethodOverride = true
reportMissingImports = false
include = ["jaxonloader", "tests"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jax_rl"]
